<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tumate</string>

    <string name="action_settings">Settings</string>

    <string name="message_loading">Loading</string>

    <string name="hint_task_name">Task name</string>
    <string name="hint_task_estimated">Task estimated</string>

    <string name="error_task_name_required">Task name is required</string>
    <string name="error_task_estimated_required">Task estimated is required</string>

    <string name="description_play_icon">Play icon</string>
    <string name="description_stop_icon">Stop icon</string>
</resources>
